# shopify_tools

./: README.md  pyproject.toml  requirements.txt  version.properties
.github/workflows/: branch_patch_version_bump.yml  branch_tag_release.yml
src/com_digitalruiz_shopify_tools/: shopify_tools.py  size_chart_order.json
